add link to resume

--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
 
 	<!-- <img src="usfca-logo.gif" width="100px"> -->
 
-	<!-- <p>I like <b>Data Visualization</b>.</p> -->
 
-	<!-- <a href="https://www.usfca.edu">USF Webpage</a> -->
+	<a href="Ziling's Resume.pdf">My Resume</a>
 
-	<p> Technical skills</p>
-	<ul>
-		<li>Python</li>
-		<li>Java</li>
-		<li>Golang</li>
-		<li>C</li>
-	</ul>
+	<div>
+		<p>Technical skills:</p>
+		<ul>
+			<li>Python</li>
+			<li>Java</li>
+			<li>Golang</li>
+			<li>C</li>
+		</ul>
+	</div>
 
-	<a href="https://bl.ocks.org/zwang155">Zero's Blocks</a>
+	<a href="https://bl.ocks.org/zwang155">My Blocks</a>
 	
 </body>
 </html>
