--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html>
 <head>
 	<title>My First Webpage</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-	<p>Hi! My name is Ziling Wang.</p>
-
-	<!-- <img src="usfca-logo.gif" width="100px"> -->
-
+	<h1>Hi! My name is Ziling Wang.</h1>
 
 	<a href="Ziling's Resume.pdf">My Resume</a>
 
