--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
 	</div>
 
 	<a href="https://bl.ocks.org/zwang155">My Blocks</a>
+
+	<div>
+		<p>Assignment 2</p>
+		<ul>
+			<li><a href="https://bl.ocks.org/zwang155/b22ce17f781d264570515bfd98bb5097">Bar Chart</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/68e4209290e2790e03aa3fb4f9c2e171">Dot Plot</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/c5c07ddd7f69182ca99a0fa88180179f">Heatmap (log scale)</a></li>
+		</ul>
+	</div>
 	
 </body>
 </html>
