--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
 			<li><a href="https://bl.ocks.org/zwang155/68e4209290e2790e03aa3fb4f9c2e171">Dot Plot</a></li>
 			<li><a href="https://bl.ocks.org/zwang155/c5c07ddd7f69182ca99a0fa88180179f">Heatmap (log scale)</a></li>
 		</ul>
+
+		<p>Assignment 3</p>
+		<ul>
+			<li><a href="https://bl.ocks.org/zwang155/317d4dc268ca1a31495f69dc136dc0b7">Histogram (w/ tooltips)</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/aeec52becd6336c56d63e39587f77b27">Box Plots (w/ outliers & tooltips)</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/6420cd3280f8af7ff758eab1b9a51f2d">Strip Chart (w/ tooltips)</a></li>
+		</ul>
 	</div>
 	
 </body>
