add ECDF for A3

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			<li><a href="https://bl.ocks.org/zwang155/317d4dc268ca1a31495f69dc136dc0b7">Histogram (w/ tooltips)</a></li>
 			<li><a href="https://bl.ocks.org/zwang155/aeec52becd6336c56d63e39587f77b27">Box Plots (w/ outliers & tooltips)</a></li>
 			<li><a href="https://bl.ocks.org/zwang155/6420cd3280f8af7ff758eab1b9a51f2d">Strip Chart (w/ tooltips)</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/e2ed21a25a81cf60d009b9fe242a6381"> ECDF (w/ tooltips)</a></li>
 		</ul>
 	</div>
 	
