--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 			<li><a href="https://bl.ocks.org/zwang155/6420cd3280f8af7ff758eab1b9a51f2d">Strip Chart (w/ tooltips)</a></li>
 			<li><a href="https://bl.ocks.org/zwang155/e2ed21a25a81cf60d009b9fe242a6381"> ECDF (w/ tooltips)</a></li>
 		</ul>
+
+		<p>Assignment 4</p>
+		<ul>
+			<li><a href="https://bl.ocks.org/zwang155/b1f01a7da17c0f397d149e6c98bd79b3">Bar Chart Race (w/ speed slider & upgrade annotation)</a></li>
+		</ul>
 	</div>
 	
 </body>
