--- a/index.html
+++ b/index.html
@@ -26,22 +26,30 @@
 	<div>
 		<p>Assignment 2</p>
 		<ul>
-			<li><a href="https://bl.ocks.org/zwang155/b22ce17f781d264570515bfd98bb5097">Bar Chart</a></li>
-			<li><a href="https://bl.ocks.org/zwang155/68e4209290e2790e03aa3fb4f9c2e171">Dot Plot</a></li>
-			<li><a href="https://bl.ocks.org/zwang155/c5c07ddd7f69182ca99a0fa88180179f">Heatmap (log scale)</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/b22ce17f781d264570515bfd98bb5097">P5 - Bar Chart</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/68e4209290e2790e03aa3fb4f9c2e171">P5 - Dot Plot</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/c5c07ddd7f69182ca99a0fa88180179f">P5 - Heatmap (log scale)</a></li>
 		</ul>
 
 		<p>Assignment 3</p>
 		<ul>
-			<li><a href="https://bl.ocks.org/zwang155/317d4dc268ca1a31495f69dc136dc0b7">Histogram (w/ tooltips)</a></li>
-			<li><a href="https://bl.ocks.org/zwang155/aeec52becd6336c56d63e39587f77b27">Box Plots (w/ outliers & tooltips)</a></li>
-			<li><a href="https://bl.ocks.org/zwang155/6420cd3280f8af7ff758eab1b9a51f2d">Strip Chart (w/ tooltips)</a></li>
-			<li><a href="https://bl.ocks.org/zwang155/e2ed21a25a81cf60d009b9fe242a6381"> ECDF (w/ tooltips)</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/317d4dc268ca1a31495f69dc136dc0b7">P5 - Histogram (w/ tooltips)</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/aeec52becd6336c56d63e39587f77b27">P5 - Box Plots (w/ outliers & tooltips)</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/6420cd3280f8af7ff758eab1b9a51f2d">P5 - Strip Chart (w/ tooltips)</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/e2ed21a25a81cf60d009b9fe242a6381"> P5 - ECDF (w/ tooltips)</a></li>
 		</ul>
 
 		<p>Assignment 4</p>
 		<ul>
-			<li><a href="https://bl.ocks.org/zwang155/b1f01a7da17c0f397d149e6c98bd79b3">Bar Chart Race (w/ speed slider & upgrade annotation)</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/b1f01a7da17c0f397d149e6c98bd79b3">P5 - Bar Chart Race (w/ speed slider & upgrade annotation)</a></li>
+		</ul>
+
+		<p>Assignment 5</p>
+		<ul>
+			<li><a href="https://bl.ocks.org/zwang155/bcd5a6c5467a19f3b4d48fd06a3bc8ac">D3 - Bar Chart</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/f984f22685a74c8366a7bd09a46dfd0a">D3 - Scatter Plot</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/abeacd26b24dcdc93917e98124798897">D3 - Heatmap (log scale)</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/d6b240fe40cbea7a80d61f84ba14e4d3">D3 - Histogram</a></li>
 		</ul>
 	</div>
 	
