--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
 			<li><a href="https://bl.ocks.org/zwang155/abeacd26b24dcdc93917e98124798897">D3 - Heatmap (log scale)</a></li>
 			<li><a href="https://bl.ocks.org/zwang155/d6b240fe40cbea7a80d61f84ba14e4d3">D3 - Histogram</a></li>
 		</ul>
+
+		<p>Assignment 6</p>
+		<ul>
+			<li><a href="https://bl.ocks.org/zwang155/91ed97ca08c9d3fe9d2ad7a837570b31">D3 - Bubble Chart (w/ tooltips)</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/00f61276b793382de36666d288d82e02">D3 - Line Chart (w/ multiple lines & tooltips)</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/71a3af25bf5bcba3db5c92a24db5988e">D3 - Scatter Plot Matrix (w/ highlight cell)</a></li>
+		</ul>
 	</div>
 	
 </body>
