--- a/index.html
+++ b/index.html
@@ -24,19 +24,36 @@
 	<a href="https://bl.ocks.org/zwang155">My Blocks</a>
 
 	<div>
-		<p>Assignment 2</p>
+
+		<p>Assignment 7</p>
 		<ul>
-			<li><a href="https://bl.ocks.org/zwang155/b22ce17f781d264570515bfd98bb5097">P5 - Bar Chart</a></li>
-			<li><a href="https://bl.ocks.org/zwang155/68e4209290e2790e03aa3fb4f9c2e171">P5 - Dot Plot</a></li>
-			<li><a href="https://bl.ocks.org/zwang155/c5c07ddd7f69182ca99a0fa88180179f">P5 - Heatmap (log scale)</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/5079c689233607dd9bdd28d4e39fb290">D3 - Bar Chart w/ Sequential Color Scale (use Colorbrewer)</a></li>
+
+			<li><a href="https://bl.ocks.org/zwang155/dc43690ddc88bdb7f33fd6c245d8e7e9">D3 - Bar Chart w/ Diverging Color Scale (use Colorbrewer)</a></li>
+
+			<li><a href="https://bl.ocks.org/zwang155/d5ff0c34be3780c169f661a5d65ad954">D3 - Bar Chart w/ Qualitative Color Scale (use Colorbrewer)</a></li>
+
+			<li><a href="https://bl.ocks.org/zwang155/c7a8f8b7abb0b822efed615dd2f7115c">D3 - Line Chart w/ Qualitative Color Scale (use Colorbrewer)</a></li>
 		</ul>
 
-		<p>Assignment 3</p>
+		<p>Assignment 6</p>
 		<ul>
-			<li><a href="https://bl.ocks.org/zwang155/317d4dc268ca1a31495f69dc136dc0b7">P5 - Histogram (w/ tooltips)</a></li>
-			<li><a href="https://bl.ocks.org/zwang155/aeec52becd6336c56d63e39587f77b27">P5 - Box Plots (w/ outliers & tooltips)</a></li>
-			<li><a href="https://bl.ocks.org/zwang155/6420cd3280f8af7ff758eab1b9a51f2d">P5 - Strip Chart (w/ tooltips)</a></li>
-			<li><a href="https://bl.ocks.org/zwang155/e2ed21a25a81cf60d009b9fe242a6381"> P5 - ECDF (w/ tooltips)</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/91ed97ca08c9d3fe9d2ad7a837570b31">D3 - Bubble Chart (w/ tooltips)</a></li>
+			
+			<li><a href="https://bl.ocks.org/zwang155/00f61276b793382de36666d288d82e02">D3 - Line Chart (w/ multiple lines & tooltips)</a></li>
+			
+			<li><a href="https://bl.ocks.org/zwang155/71a3af25bf5bcba3db5c92a24db5988e">D3 - Scatter Plot Matrix (w/ highlight cell)</a></li>
+		</ul>
+
+		<p>Assignment 5</p>
+		<ul>
+			<li><a href="https://bl.ocks.org/zwang155/bcd5a6c5467a19f3b4d48fd06a3bc8ac">D3 - Bar Chart</a></li>
+			
+			<li><a href="https://bl.ocks.org/zwang155/f984f22685a74c8366a7bd09a46dfd0a">D3 - Scatter Plot</a></li>
+			
+			<li><a href="https://bl.ocks.org/zwang155/abeacd26b24dcdc93917e98124798897">D3 - Heatmap (log scale)</a></li>
+			
+			<li><a href="https://bl.ocks.org/zwang155/d6b240fe40cbea7a80d61f84ba14e4d3">D3 - Histogram</a></li>
 		</ul>
 
 		<p>Assignment 4</p>
@@ -44,20 +61,26 @@
 			<li><a href="https://bl.ocks.org/zwang155/b1f01a7da17c0f397d149e6c98bd79b3">P5 - Bar Chart Race (w/ speed slider & upgrade annotation)</a></li>
 		</ul>
 
-		<p>Assignment 5</p>
+		<p>Assignment 3</p>
 		<ul>
-			<li><a href="https://bl.ocks.org/zwang155/bcd5a6c5467a19f3b4d48fd06a3bc8ac">D3 - Bar Chart</a></li>
-			<li><a href="https://bl.ocks.org/zwang155/f984f22685a74c8366a7bd09a46dfd0a">D3 - Scatter Plot</a></li>
-			<li><a href="https://bl.ocks.org/zwang155/abeacd26b24dcdc93917e98124798897">D3 - Heatmap (log scale)</a></li>
-			<li><a href="https://bl.ocks.org/zwang155/d6b240fe40cbea7a80d61f84ba14e4d3">D3 - Histogram</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/317d4dc268ca1a31495f69dc136dc0b7">P5 - Histogram (w/ tooltips)</a></li>
+			
+			<li><a href="https://bl.ocks.org/zwang155/aeec52becd6336c56d63e39587f77b27">P5 - Box Plots (w/ outliers & tooltips)</a></li>
+			
+			<li><a href="https://bl.ocks.org/zwang155/6420cd3280f8af7ff758eab1b9a51f2d">P5 - Strip Chart (w/ tooltips)</a></li>
+			
+			<li><a href="https://bl.ocks.org/zwang155/e2ed21a25a81cf60d009b9fe242a6381"> P5 - ECDF (w/ tooltips)</a></li>
 		</ul>
 
-		<p>Assignment 6</p>
+		<p>Assignment 2</p>
 		<ul>
-			<li><a href="https://bl.ocks.org/zwang155/91ed97ca08c9d3fe9d2ad7a837570b31">D3 - Bubble Chart (w/ tooltips)</a></li>
-			<li><a href="https://bl.ocks.org/zwang155/00f61276b793382de36666d288d82e02">D3 - Line Chart (w/ multiple lines & tooltips)</a></li>
-			<li><a href="https://bl.ocks.org/zwang155/71a3af25bf5bcba3db5c92a24db5988e">D3 - Scatter Plot Matrix (w/ highlight cell)</a></li>
+			<li><a href="https://bl.ocks.org/zwang155/b22ce17f781d264570515bfd98bb5097">P5 - Bar Chart</a></li>
+			
+			<li><a href="https://bl.ocks.org/zwang155/68e4209290e2790e03aa3fb4f9c2e171">P5 - Dot Plot</a></li>
+			
+			<li><a href="https://bl.ocks.org/zwang155/c5c07ddd7f69182ca99a0fa88180179f">P5 - Heatmap (log scale)</a></li>
 		</ul>
+
 	</div>
 	
 </body>
