--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 
 	<div>
 
+		p>Assignment 8</p>
+		<ul>
+			<li><a href="https://bl.ocks.org/zwang155/fe86136c5db671f7afd5cb4bd84ef398">D3 - Node-link Diagram with Force-Directed Layout (w/ drag, tooltips, highlight)</a></li>
+
+			<li><a href="https://bl.ocks.org/zwang155/cfb7a70b6d08c1089b123235b874da37">D3 - Adjacency Matrix (w/ tooltips, highlight)</a></li>
+		</ul>
+
 		<p>Assignment 7</p>
 		<ul>
 			<li><a href="https://bl.ocks.org/zwang155/5079c689233607dd9bdd28d4e39fb290">D3 - Bar Chart w/ Sequential Color Scale (use Colorbrewer)</a></li>
