--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 			<li><a href="https://bl.ocks.org/zwang155/fe86136c5db671f7afd5cb4bd84ef398">D3 - Node-link Diagram with Force-Directed Layout (w/ drag, tooltips, highlight)</a></li>
 
 			<li><a href="https://bl.ocks.org/zwang155/cfb7a70b6d08c1089b123235b874da37">D3 - Adjacency Matrix (w/ tooltips, highlight)</a></li>
+
+			<li><a href="https://bl.ocks.org/zwang155/46f1ab551d2c65a0a15d193125dddbae">D3 - Node-link Diagram with Force-Directed Layout (w/ drag, tooltips, highlight) (use soc-tribes dataset)</a></li>
+
+			<li><a href="https://bl.ocks.org/zwang155/7897a681e1d35f9fe1671f7e92374f61">D3 - Adjacency Matrix (w/ tooltips, highlight) (use soc-tribes dataset)</a></li>
 		</ul>
 
 		<p>Assignment 7</p>
