--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<div>
 
-		p>Assignment 8</p>
+		<p>Assignment 8</p>
 		<ul>
 			<li><a href="https://bl.ocks.org/zwang155/fe86136c5db671f7afd5cb4bd84ef398">D3 - Node-link Diagram with Force-Directed Layout (w/ drag, tooltips, highlight)</a></li>
 
