--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 	<a href="https://bl.ocks.org/zwang155">My Blocks</a>
 
 	<div>
+		<p>Final Project</p>
+		<ul>
+			<li><a href="https://zwang155.github.io/Mobile-Strategy-Games/">Final Porject - Mobile Strategy Games</a></li>
+		</ul>
 
 		<p>Assignment 8</p>
 		<ul>
