--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 			<li><a href="https://zwang155.github.io/Mobile-Strategy-Games/">Final Porject - Mobile Strategy Games</a></li>
 		</ul>
 
+		<p>Assignment 9</p>
+		<ul>
+			<li><a href="https://bl.ocks.org/zwang155/323c67545730ea17070f8a9acdd961e4">D3 - Interactive Line Chart</a></li>
+
+			<li><a href="https://bl.ocks.org/zwang155/e587b9a625fdb94620fbdf6b503341c4">D3 - Interactive Line Chart (w/ a different dataset)</a></li>
+		</ul>
+
 		<p>Assignment 8</p>
 		<ul>
 			<li><a href="https://bl.ocks.org/zwang155/fe86136c5db671f7afd5cb4bd84ef398">D3 - Node-link Diagram with Force-Directed Layout (w/ drag, tooltips, highlight)</a></li>
