--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 			<li><a href="https://zwang155.github.io/Mobile-Strategy-Games/">Final Porject - Mobile Strategy Games</a></li>
 		</ul>
 
+		<p>Assignment 10</p>
+		<ul>
+			<li><a href="https://bl.ocks.org/zwang155/04d06402c5087bdd0f4a52f273b64c0f">D3 - Choropleth map</a></li>
+
+			<li><a href="https://bl.ocks.org/zwang155/3c7ba6046ce9edf3598e150b7592c083">D3 - Proportional Symbols</a></li>
+		</ul>
+
 		<p>Assignment 9</p>
 		<ul>
 			<li><a href="https://bl.ocks.org/zwang155/323c67545730ea17070f8a9acdd961e4">D3 - Interactive Line Chart</a></li>
